--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "btuid",
-  "version": "1.0.9",
+  "version": "1.0.10",
   "description": "Btuid library provides an interface to generate UIDs (Unique Identifiers) that are safe, cryptographically secure, and unpredictable, ensuring that every UUID is unique. The library also supports B+tree indexing, which makes it ideal for use in database systems or cloud data indexing, ensuring efficient geographical and temporal distribution.",
   "keywords": [
     "uuid",
@@ -29,7 +29,5 @@
     "@types/node": "^22.15.17",
     "tsx": "^4.19.4"
   },
-  "dependencies": {
-
-  }
+  "dependencies": {}
 }
